Polished menus and fixed issue where menu was skipped at boot

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,10 +24,10 @@ upload_speed = 921600
 
 [env:emulator-linux]
 platform_packages = ttgo-tdisplay-emulator-linux @ https://github.com/a159x36/qemu/releases/download/linux/ttgo-tdisplay-emulator.tar.gz
-upload_protocol = custom
-upload_command = $PROJECT_PACKAGES_DIR/ttgo-tdisplay-emulator-linux/emulate $SOURCE $BUILD_DIR $PROJECT_PACKAGES_DIR
+;upload_protocol = custom
+;upload_command = $PROJECT_PACKAGES_DIR/ttgo-tdisplay-emulator-linux/emulate $SOURCE $BUILD_DIR $PROJECT_PACKAGES_DIR
 
 [env:emulator-windows]
 platform_packages = ttgo-tdisplay-emulator @ https://github.com/a159x36/qemu/releases/download/win/ttgo-tdisplay-emulator.tar.gz
-upload_protocol = custom
-upload_command = $PROJECT_PACKAGES_DIR/ttgo-tdisplay-emulator/emulate $SOURCE $BUILD_DIR $PROJECT_PACKAGES_DIR
+;upload_protocol = custom
+;upload_command = $PROJECT_PACKAGES_DIR/ttgo-tdisplay-emulator/emulate $SOURCE $BUILD_DIR $PROJECT_PACKAGES_DIR
